syntax = "proto3";

package internal.conf;

import "google/protobuf/duration.proto";
import "util/api/util/v1/general.proto";

option go_package = "gitee.com/moyusir/dataCollection/internal/conf;conf";

message Bootstrap {
    Server server = 1;
    Data data = 2;
    api.util.v1.LogLevel log_level = 3;
}

message Server {
    message HTTP {
        string network = 1;
        string addr = 2;
        google.protobuf.Duration timeout = 4;
    }
    HTTP http = 1;
}

message Data {
    message Redis {
        // redis service的主机地址
        string host = 1;
        // redis server端口
        int64 server_port = 2;
        // redis sentinel端口
        int64 sentinel_port = 3;
        // redis sentinel集群使用的master标识名
        string master_name = 4;
        // redis连接池大小
        int64 pool_size = 5;
        // redis连接池的最小空闲连接数
        int64 min_idle_conns = 6;
    }
    message Influxdb{
        // influxdb服务器的地址
        string server_url=1;
        // 读写influxdb所需的auth token
        string auth_token=2;
        // influxdb中用户的标识信息 organization
        string org=3;
        // 启动task时的offset，应该由网络传输延迟以及记录写入时间等因素决定
        google.protobuf.Duration task_offset=4;
    }
    Redis redis = 1;
    Influxdb influxdb = 2;
    // 保存设备状态注册信息的json文件的路径
    string device_state_register_info=3;
}
